fix base of container

--- a/stack.yaml
+++ b/stack.yaml
@@ -71,10 +71,10 @@ image:
     # YOU NEED A BASE IMAGE NAME. STACK LAYERS EXES ON TOP OF
     # THE BASE IMAGE. PREPARE YOUR PROJECT IMAGE IN ADVANCE. PUT
     # ALL YOUR RUNTIME DEPENDENCIES IN THE IMAGE.
-    base: "ubuntu"
+    base: "fpco/ubuntu-with-libgmp:14.04"
     # YOU CAN OPTIONALY NAME THE IMAGE. STACK WILL USE THE PROJECT
     # DIRECTORY NAME IF YOU LEAVE OUT THIS OPTION.
-    name: "kana/tournament"
+    name: "thevarlog/tournament"
     # OPTIONALLY SPECIFY A LIST OF EXECUTABLES. STACK WILL CREATE
     # A TAGGED IMAGE FOR EACH IN THE LIST. THESE IMAGES WILL HAVE
     # THEIR RESPECTIVE "ENTRYPOINT" SET.
